# btracker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux.yml
crates/crawler/: Cargo.toml  README.md
crates/crawler/src/: config.rs  full_scrape.rs  i2p.rs  main.rs  opt.rs  tracker.rs
crates/crawler/src/config/: preload.rs  timeout.rs  tracker.rs
crates/crawler/src/config/tracker/: announce.rs  scrape.rs
crates/crawler/src/config/tracker/announce/: default.rs  i2p.rs
crates/fs/: Cargo.toml  README.md
crates/fs/src/: crawler.rs  lib.rs  public.rs
crates/gemini/: Cargo.toml  README.md
crates/gemini/src/: config.rs  format.rs  main.rs  route.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: config.rs  info_hash.rs  main.rs  torrent.rs
crates/http/src/feed/: link.rs
crates/http/templates/layout/: default.html.tera
crates/scrape/: Cargo.toml  LICENSE  README.md
crates/scrape/src/: lib.rs  udp.rs
public/: .gitignore
public/theme/: default.css
src/: api.rs  config.rs  feed.rs  format.rs  main.rs  meta.rs  peers.rs  preload.rs  public.rs  scrape.rs  scraper.rs  storage.rs  torrent.rs  trackers.rs
src/api/: info_hash.rs
src/scraper/: udp.rs
src/torrent/: file.rs
static/theme/: default.css
templates/: index.html.tera  info.html.tera
templates/layout/: default.html.tera
