[package]
name = "btracker"
version = "0.3.9"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "βtracker is a social BitTorrent aggregator based on the aquatic-crawler FS index and Rocket web-framework"
keywords = ["bittorrent", "aquatic", "aquatic-crawler", "librqbit", "rocket"]
categories = ["network-programming"]
repository = "https://github.com/yggverse/btracker"
# homepage = "https://yggverse.github.io"

[dependencies]
btracker-fs = { version = "0.3.1", features = ["public"] }
btracker-scrape = { version = "0.1.0" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
librqbit-core = "5.0.0"
rand = "0.10.1"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
url = { version = "2.5.8", features = ["serde"] }
urlencoding = "2.1.3"

# development
# [patch.crates-io]
# btracker-fs = { git = "https://github.com/yggverse/btracker-fs.git" }
# btracker-fs = { path = "../btracker-fs" }