[workspace]
resolver = "2"
members = [
    "crates/crawler",
    "crates/fs",
    "crates/gemini",
    "crates/http",
    "crates/scrape",
]

default-members = [
    "crates/crawler",
    "crates/fs",
    "crates/gemini",
    "crates/http",
    "crates/scrape",
]

[patch.crates-io]
#btracker-fs = { git = "https://github.com/yggverse/btracker.git", package = "btracker-fs" }
btracker-fs = { path = "crates/fs" }

librqbit = { git = "https://github.com/ikatson/rqbit.git", rev="61e189a9b37ab3ba678efa66586c2c1aabeed584", package = "librqbit" }
#librqbit = { version = "9.0.0-beta.1", path = "../../rqbit/crates/librqbit", package = "librqbit" }