[workspace]
resolver = "2"
members = [
    "crates/crawler",
    "crates/fs",
    "crates/gemini",
    "crates/http",
]

default-members = [
    "crates/crawler",
    "crates/fs",
    "crates/gemini",
    "crates/http",
]

[patch.crates-io]
#btracker-fs = { git = "https://github.com/yggverse/btracker.git", package = "btracker-fs" }
#btracker-fs = { path = "crates/fs" }

#librqbit = { git = "https://github.com/ikatson/rqbit.git", rev="ba07a75c9ad3bbb5e1d8aa8dee815ce8820fe372", package = "librqbit" }
#librqbit = { version = "9.0.0-beta.1", path = "../../rqbit/crates/librqbit", package = "librqbit" }

#btpeer = { git = "https://codeberg.org/YGGverse/btpeer.git" }
#btpeer = { path = "../../codeberg/yggverse/btpeer" }