[package]
name = "btracker-crawler"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "SSD-friendly FS crawler of BEP 48 / Full Scrape, based on the librqbit resolver"
keywords = ["full-scrape", "librqbit", "bittorrent", "crawler", "resolver"]
categories = ["network-programming"]
repository = "https://github.com/YGGverse/btracker"
# homepage = "https://yggverse.github.io"

[features]
i2p = ["dep:btpeer", "dep:cyphernet", "dep:yosemite"]

[dependencies]
anyhow = "1.0.102"
bendy = "0.6.1"
btpeer = { version = "0.8.0", optional = true }
btracker-fs = { version = "0.3.1", features = ["crawler"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
cyphernet = { version = "0.5.4", features = ["i2p"], optional = true }
librqbit = { version = "9.0.0-rc.0", features = ["disable-upload"]}
log = "0.4.30"
regex = "1.12.3"
reqwest = "0.13.4"
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
urlencoding = "2.1.3"
yosemite = { version = "0.7.0", optional = true }