[package]
name = "btracker-crawler"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "SSD-friendly FS crawler of BEP 48 / Full Scrape, based on librqbit"
keywords = ["bittorrent", "dht", "librqbit", "full-scrape", "crawler"]
categories = ["network-programming"]
repository = "https://github.com/YGGverse/btracker"
# homepage = "https://yggverse.github.io"

[dependencies]
anyhow = "1.0.102"
btpeer = "0.11.1"
btracker-fs = { version = "0.5.0", features = ["crawler"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
cyphernet = { version = "0.5.4", features = ["i2p"] }
librqbit = { version = "9.0.0-rc.0", features = ["disable-upload"]}
log = "0.4.30"
rand = "0.10.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-inline-default = "1.0.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
yosemite =  "0.7.0"
