[package]
name = "btracker-gemini"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "βtracker server implementation for the Gemini protocol"
keywords = ["btracker", "bittorrent", "gemini", "gemini-protocol", "server"]
categories = ["database-implementations", "network-programming", "filesystem"]
repository = "https://github.com/YGGverse/btracker"

[dependencies]
anyhow = "1.0.95"
btracker-fs = { version = "0.4.0", features = ["public"] }
btracker-scrape = "0.1.0"
chrono = "^0.4.20"
clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.28"
native-tls = "0.2.14"
titanite = "0.3.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
librqbit-core = "5.0.0"
plurify = "0.2.0"
url = "2.5.7"
urlencoding = "2.1.3"
regex = "1.11.2"