[package]
name = "btracker-gemini"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "βtracker server implementation for the Gemini protocol"
keywords = ["btracker", "bittorrent", "gemini", "gemini-protocol", "server"]
categories = ["database-implementations", "network-programming", "filesystem"]
repository = "https://github.com/YGGverse/btracker"

[dependencies]
anyhow = "1.0.95"
btracker-fs = { version = "0.5.0", features = ["public"] }
btracker-scrape = "0.2.0"
chrono = "^0.4.20"
clap = { version = "4.5.30", features = ["derive"] }
librqbit-core = "5.0.0"
log = "0.4.28"
native-tls = "0.2.14"
plurify = "0.2.0"
regex = "1.11.2"
titanite = "0.3.2"
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
urlencoding = "2.1.3"