[package]
name = "btracker-http"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "βtracker is a social BitTorrent aggregator based on btracker-fs, btracker-crawler and Rocket Web-framework"
keywords = ["bittorrent", "btracker-fs", "btracker-crawler", "librqbit", "rocket"]
categories = ["network-programming"]
repository = "https://github.com/yggverse/btracker"
# homepage = "https://yggverse.github.io"

[dependencies]
btpeer = "0.11.1"
btracker-fs = { version = "0.5.0", features = ["public"] }
btracker-scrape = "0.2.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
librqbit-core = "5.0.0"
rand = "0.10.1"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2.4"
url = { version = "2.5.8", features = ["serde"] }
urlencoding = "2.1.3"
