[package]
name = "btracker-scrape"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Shared BitTorrent scrape API for the βtracker project components"
keywords = ["btracker", "bittorrent", "scrape", "udp", "tcp"]
categories = ["network-programming"]
repository = "https://github.com/YGGverse/btracker"

[dependencies]
rand = "0.9.2"
